--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <div class="ribbon">
-                    <td>><a href=''><span>返回班级主页</span></a></td>
+                    <td>><a href='https://sunweixuanalpha.github.io/CS2308/'><span>返回班级主页</span></a></td>
                 </div>
             </tr>
         
